<resources>
    <string name="app_name">Goonj</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event1">Event 1</string>
    <string name="event2">Event 2</string>
    <string name="event3">Event 3</string>
    <string name="wrong_choice">Wrong Choice!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_event">Add Event</string>
    <string name="signing_in">Signing In</string>
    <string name="signing_in_error">Can\'t sign in</string>
    <string name="title_activity_add_event">AddEvent</string>
    <string name="eventname">Event Name</string>
    <string name="eventdescription">Event Rules</string>
    <string name="event_start_time">Event starts at</string>
    <string name="event_stop_time">Event stops at</string>
    <string name="event_date">Choose event date</string>
    <string name="eventfrom">Choose event Start Time</string>
    <string name="event_venue">Event Venue</string>
    <string name="submit_details">Submit Event</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="fill_all">Please fill all the fields!</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="event_category">Choose event category</string>
    <string name="firebase_error">Please try again!</string>
    <string name="firebse_data_successfully_add">Event Submitted!</string>
    <string name="add_another_event">Add Another Event</string>
    <string name="category_error">Select a valid category!</string>
    <string name="add_Coordinator">Add A Coordinator</string>
    <string name="user_cancel_signin">Sign-In cancelled!</string>
    <string name="no_network">You are not connected!</string>
    <string name="techincal_issues">Snap! Sign-In issues.</string>
    <string name="signout_success">Signed out!</string>
    <string name="rules">Rules :-</string>
    <string name="add_update">Release Update</string>
    <string name="user_add">Enjoy the Frenzy!</string>
    <string name="server_record_fail">Try again to request Admin access!</string>
    <string name="crit">Criteria :-</string>
    <string name="points">Points :-</string>
    <string name="no_call">Permit to make a call!</string>
    <string name="makingcall">Making call!</string>
    <string name="no_app">No such apps!</string>
    <string name="update_type">Update Title</string>
    <string name="update_message">Update Message</string>
    <string name="rel_update">Release an update</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="making_builder">Making Builder</string>
    <string name="neccesary">This field is necessary!</string>
    <string name="upd_no_rel">Update cancelled!</string>
    <string name="login_require">Login Required!</string>
    <string name="upd_released">Update Released!</string>
    <string name="upd_not_released">Update Cancelled! Please try again!</string>
    <string name="by">By :- </string>
    <string name="no_internet">You are not connected!</string>
    <string name="upd_tuned">Stay tuned for event updates!</string>
    <string name="nav_message">Goonj\' 17</string>
    <string name="title_activity_feedback">Share Feedback</string>
</resources>
