<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/card_margin"
        android:id="@+id/parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.abhiroj.goonj.activity.AddEvent"
        tools:showIn="@layout/activity_add_event">

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eventname" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/event_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_category" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/event_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eventdescription" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eventfrom" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_date" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>


        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/event_venue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_venue" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <Button
            android:id="@+id/submit_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_details"/>



    </LinearLayout>
</ScrollView>
