<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_margin="@dimen/card_margin"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dia_title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/rel_update"
            android:gravity="center"
            android:textSize="24sp"
            android:contentDescription="@string/app_name" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/upd_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/update_type" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/upd_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/update_message"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:gravity="left"
                android:layout_weight="1"
                android:textSize="@dimen/handler_button_size"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/go"
                android:gravity="right"
                android:textSize="@dimen/handler_button_size"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>